unpackaged/main/default/objects/ET_Case_Comment__c/ET_Case_Comment__c.object-meta.xml
<CustomObject>
    <label>Case Comment</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Case Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>