unpackaged/main/default/objects/ET_Case_Comment__c/fields/ET_Action__c.field-meta.xml
<CustomField>
    <fullName>ET_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>