unpackaged/main/default/objects/ET_Case_Comment__c/fields/ET_Case__c.field-meta.xml
<CustomField>
    <fullName>ET_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Comments</relationshipLabel>
    <relationshipName>Case_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>