unpackaged/main/default/objects/ET_Case_Comment__c/fields/ET_Comments__c.field-meta.xml
<CustomField>
    <fullName>ET_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>